--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And as we add or subtract countries, we will still be iterating through our list elements."
+    "And as we add or subtract countries, we will still be iterating through our list elements:"
    ]
   },
   {
